--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fastify typescript prisma api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts",
+    "test": "tap --node-arg=--require=ts-node/register"
   },
   "author": "riefer02",
   "license": "ISC",
