--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.14.0",
-    "@types/node": "^17.0.32",
     "fastify": "^3.29.0",
     "fastify-jwt": "^4.2.0",
     "fastify-swagger": "^5.2.0",
     "fastify-zod": "^1.0.0-rc10",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.4",
+    "tap": "^16.2.0",
     "zod": "^3.16.0",
     "zod-to-json-schema": "^3.14.1"
+  },
+  "devDependencies": {
+    "@types/fastify-jwt": "^0.8.1",
+    "@types/node": "^17.0.34",
+    "@types/tap": "^15.0.7",
+    "sinon": "^14.0.0",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
   }
 }
