--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.14.0",
     "fastify": "^3.29.0",
     "fastify-jwt": "^4.2.0",
+    "fastify-swagger": "^5.2.0",
     "fastify-zod": "^0.0.2",
     "tap": "^16.2.0",
     "zod": "^3.16.0",
